[package]
name = "conrod_keypad"
version = "0.1.0"
authors = ["alanpoon"]

[dependencies]
conrod = { version ="0.56.0", features = ["glium","winit"]}
conrod_derive = "0.1.0"
cardgame_widgets = {git="https://github.com/alanpoon/cardgame_widgets.git"}

[dev-dependencies]
image = "0.15.0"

[package.metadata.android]
package_name = "com.github.apoon1.conrod-keypad"
label = "Conrod Keypad"
android_version = 19
build_targets = ["arm-linux-androideabi"]
assets = "assets"

[target.'cfg(target_os="android")'.dev-dependencies]
android_glue = "0.2.3"
rusttype = "*"

[target.'cfg(not(target_os="android"))'.dev-dependencies]
find_folder = "0.3.0"