[package]
name = "conrod_keypad"
version = "0.1.0"
authors = ["alanpoon"]

[dependencies]
conrod_core = { path ="../conrod/conrod_core"}
conrod_derive = { path = "../conrod/conrod_derive"}
svg = "0.5.12"
nalgebra = "0.18"
num = "0.2.0"
bezier2 = "0.2.0"
polygon2 = {path = "../rs-polygon2"}
rtriangulate = "0.3.1"

[dev-dependencies]
image = "0.15.0"
conrod_glium = {path = "../conrod/backends/conrod_glium"}
conrod_winit = {path = "../conrod/backends/conrod_winit"}
glium = { version = "0.23" }

[package.metadata.android]
package_name = "com.github.apoon1.conrod-keypad"
label = "Conrod Keypad"
android_version = 19
build_targets = ["arm-linux-androideabi"]
assets = "assets"

[target.'cfg(target_os="android")'.dev-dependencies]
android_glue = "0.2.3"
rusttype = "0.5"

[target.'cfg(not(target_os="android"))'.dev-dependencies]
find_folder = "0.3.0"
