[package]
name = "conrod_keypad"
version = "0.1.0"
authors = ["alanpoon"]

[dependencies]
conrod_core = { git ="https://github.com/alanpoon/conrod.git",branch = "crayon"}
conrod_derive = { git ="https://github.com/alanpoon/conrod.git",branch = "crayon"}
svg = "0.5.12"
nalgebra = "0.18"
num = "0.2.0"
bezier2 = "0.2.0"
polygon2 = {git = "https://github.com/alanpoon/rs-polygon2.git",branch = "std"}
rtriangulate = "0.3.1"

[dev-dependencies]
image = "0.15.0"
conrod_glium = { git ="https://github.com/alanpoon/conrod.git",branch = "crayon"}
conrod_winit = { git ="https://github.com/alanpoon/conrod.git",branch = "crayon"}
glium = { version = "0.23" }

[package.metadata.android]
package_name = "com.github.apoon1.conrod-keypad"
label = "Conrod Keypad"
android_version = 19
build_targets = ["arm-linux-androideabi"]
assets = "assets"

[target.'cfg(target_os="android")'.dev-dependencies]
android_glue = "0.2.3"
rusttype = "0.5"

[target.'cfg(not(target_os="android"))'.dev-dependencies]
find_folder = "0.3.0"
